# flame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TK_Engine.sln  TODO  engine.sln  solution.sln
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
games/shoot_at_the_basket/: CMakeLists.txt
games/shoot_at_the_basket/src/: main.cpp
src/flame/: CMakeLists.txt  blueprint.h  common_exports.h  config.h  config.in  engine_exports.h  exports.h  file_utils.h  filesystem.cpp  filesystem.h  global.cpp  global.h  image.cpp  image.h  image_utils.cpp  image_utils.h  input.h  math.cpp  math.h  object.cpp  select.h  serialize.h  serialize_math.h  spare_list.cpp  spare_list.h  string.h  string_utils.cpp  surface.cpp  surface.h  system.cpp  system.h  time.h  type.h
src/flame/UI/: CMakeLists.txt  UI.cpp  UI.h  UI_private.h  instance.cpp  instance.h  instance_private.h  widget.cpp  widget.h  widget_private.cpp  widget_private.h
src/flame/common/: CMakeLists.txt  filesystem.cpp  filesystem.h  image.cpp  image.h  math.cpp  math.h  spare_list.cpp  spare_list.h  string.cpp  string.h  system.cpp  system.h
src/flame/container/: spare_list.cpp
src/flame/engine/: CMakeLists.txt  application.cpp  application.h  config.h  config.h.in  core.cpp  core.h  input.cpp  object.cpp  object.h  system.cpp  system.h
src/flame/engine/core/: application.cpp  application.h  core.cpp  core.h  input.cpp  input.h  object.cpp  surface.cpp  surface.h
src/flame/engine/entity/: animation.cpp  animation.h  camera.cpp  camera.h  camera_third_person.h  controller.cpp  controller.h  entity.cpp  light.cpp  light.h  model.cpp  model.h  model_instance.cpp  model_instance.h  node.cpp  node.h  scene.cpp  scene.h  terrain.cpp  terrain.h  water.cpp  water.h
src/flame/engine/graphics/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  descriptor.cpp  descriptor.h  display_layer.cpp  display_layer.h  framebuffer.cpp  framebuffer.h  graphics.cpp  graphics.h  material.cpp  material.h  pick_up.cpp  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  renderpass.cpp  renderpass.h  resource.cpp  sampler.cpp  sampler.h  shader.cpp  shader.h  synchronization.cpp  texture.cpp  texture.h
src/flame/engine/physics/: physics.cpp  physics.h
src/flame/engine/sound/: sound.cpp  sound.h
src/flame/engine/ui/: fileselector.cpp  fileselector.h  imageviewer.cpp  imageviewer.h  layout.cpp  layout.h  ui.cpp  ui.h  window.cpp  window.h  window_exports.h
src/flame/entity/: animation.cpp  animation.h  camera.cpp  camera.h  component.cpp  component.h  controller.cpp  controller.h  entity.cpp  entity.h  light.cpp  light.h  model.cpp  model.h  model_instance.cpp  model_instance.h  node.cpp  node.h  scene.cpp  scene.h  sky.cpp  sky.h  terrain.cpp  terrain.h  water.cpp  water.h
src/flame/graphics/: CMakeLists.txt  buffer.cpp  buffer.h  buffer_private.h  command_buffer.cpp  command_buffer.h  commandbuffer.cpp  commandbuffer.h  commandbuffer_private.h  descriptor.cpp  descriptor.h  descriptor_private.h  device.cpp  device.h  device_private.h  display_layer.cpp  display_layer.h  framebuffer.cpp  framebuffer.h  framebuffer_private.h  graphics.cpp  graphics.h  graphics_private.cpp  graphics_private.h  material.cpp  material.h  ogl.cpp  ogl.h  pipeline.cpp  pipeline.h  pipeline_private.h  queue.cpp  queue.h  queue_private.h  renderer.cpp  renderer.h  renderpass.cpp  renderpass.h  renderpass_private.h  sampler.cpp  (+19 more)
src/flame/graphics/WIP/: buffer.cpp  command_buffer.cpp  command_buffer.h  descriptor.cpp  descriptor.h  framebuffer.cpp  framebuffer.h  pipeline.cpp  pipeline.h  renderpass.cpp  renderpass.h  resource.h  sampler.cpp  shader.cpp  shader.h  synchronization.h  texture.cpp  texture.h
src/flame/math/: math.cpp  math.h
src/flame/model/: CMakeLists.txt  animation.cpp  animation.h  model.cpp  model.h
src/flame/physics/: CMakeLists.txt  device.cpp  device.h  device_private.h  material_private.h  physics.cpp  physics.h  physics_private.h  rigid.cpp  rigid.h  rigid_private.h  scene.cpp  scene.h  scene_private.h  shape.cpp  shape.h  shape_private.h
src/flame/pick_up/: pick_up.h
src/flame/resource/: resource.cpp  resource.h
src/flame/shader/: CMakeLists.txt  shader.cpp  shader.h
src/flame/sound/: sound.cpp  sound.h
src/flame/surface/: CMakeLists.txt  input.cpp  input.h  surface.cpp  surface.h
src/flame/ui/: ui.cpp  ui.h
src/flame/utils/: file.cpp  file.h  filesystem.cpp  filesystem.h  image.cpp  image.h  pick_up.cpp  string.cpp  string.h  utils.cpp  utils.h
tests/UI_test/: CMakeLists.txt  auto_compile.ps1
tests/UI_test/src/: main.cpp
tests/UI_test/windows/: test.cpp
tests/graphics_test/: CMakeLists.txt
tests/graphics_test/src/: main.cpp
tests/physics_test/: CMakeLists.txt
tests/physics_test/src/: main.cpp
tests/surface_test/: CMakeLists.txt
tests/surface_test/src/: main.cpp
tests/terrain_test/: CMakeLists.txt
tests/terrain_test/src/: main.cpp
tools/SLOC/: CMakeLists.txt
tools/SLOC/src/: main.cpp
tools/UI_editor/: CMakeLists.txt
tools/UI_editor/src/: main.cpp
tools/auto_compiler/: CMakeLists.txt
tools/auto_compiler/src/: main.cpp
tools/code_editor/: CMakeLists.txt
tools/code_editor/src/: main.cpp
tools/editor/: CMakeLists.txt
tools/editor/src/: app.cpp  editor.cpp  select.cpp  select.h
tools/editor/src/tool/: tool.h  transformer_tool.cpp  transformer_tool.h
tools/editor/src/window/: blueprint_editor.cpp  blueprint_editor.h  (+24 more)
tools/editor/windows/: test.cpp
tools/effect_editor/: CMakeLists.txt
tools/effect_editor/src/: main.cpp
tools/pin/: CMakeLists.txt
tools/pin/src/: main.cpp
tools/playground/: CMakeLists.txt
tools/playground/src/: main.cpp
tools/sdf_generator/: CMakeLists.txt
tools/sdf_generator/src/: main.cpp
tools/skeleton_test/: CMakeLists.txt
tools/skeleton_test/src/: main.cpp
tools/spv/: CMakeLists.txt
tools/spv/src/: main.cpp
tools/spy/: CMakeLists.txt
tools/spy/src/: main.cpp
tools/test/: CMakeLists.txt
tools/test/src/: main.cpp
tools/tk_test/: CMakeLists.txt
tools/tk_test/src/: main.cpp
(+894 files in other folders)
